--- a/elda-testing-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/elda-testing-webapp/src/main/webapp/WEB-INF/web.xml
@@ -6,44 +6,28 @@
 
   <servlet>
     <servlet-name>jersey</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
     
     <init-param>
     	<param-name>com.sun.jersey.config.property.packages</param-name>
     	<param-value>com.epimorphics.lda.restlets</param-value>
     </init-param>
+
+    <init-param> 
+        <param-name>com.epimorphics.api.initialSpecFile</param-name> 
+        <param-value>specs/system-test-A.ttl</param-value>
+    </init-param>
     
     <load-on-startup>1</load-on-startup>
   </servlet>
   
-  <servlet>
-  	<servlet-name>loader-init</servlet-name>
-  	<servlet-class>com.epimorphics.lda.routing.Loader</servlet-class>
-  	<init-param>
-	<param-name>com.epimorphics.api.initialSpecFile</param-name>
-        <param-value>specs/system-test-A.ttl</param-value>
-  	</init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <!--
-  <servlet>
-  	<servlet-name>hub-handler</servlet-name>
-  	<servlet-class>com.epimorphics.lda.servlets.Hub</servlet-class>
-  </servlet>
-  
-  <servlet-mapping>
-  	<servlet-name>hub-handler</servlet-name>
-  	<url-pattern>/hub/*</url-pattern>
-  </servlet-mapping>
-  -->
-
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>/docs/*</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
+
     <servlet-name>jersey</servlet-name>
     <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
