Reversion of code to loader style, #1.

--- a/elda-testing-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/elda-testing-webapp/src/main/webapp/WEB-INF/web.xml
@@ -21,13 +21,22 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
   
+  <servlet>
+  	<servlet-name>loader-init</servlet-name>
+  	<servlet-class>com.epimorphics.lda.routing.Loader</servlet-class>
+  	<init-param>
+		<param-name>com.epimorphics.api.initialSpecFile</param-name>
+        <param-value>specs/system-test-A.ttl</param-value>
+  	</init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>/docs/*</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-
     <servlet-name>jersey</servlet-name>
     <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
