--- a/deliver-elda/src/main/webapp/WEB-INF/web.xml
+++ b/deliver-elda/src/main/webapp/WEB-INF/web.xml
@@ -2,37 +2,37 @@
 <!DOCTYPE web-app PUBLIC 
 	'-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN'
 	'http://java.sun.com/dtd/web-app_2_3.dtd'>
-<web-app>
+<web-app>        
+
+	<filter>
+    	<filter-name>UrlRewriteFilter</filter-name>
+        <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
+   
+        <!--
+        <init-param>
+            <param-name>logLevel</param-name>
+            <param-value>DEBUG</param-value>
+        </init-param>
+        -->
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>UrlRewriteFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
   <servlet>
     <servlet-name>app</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
+    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
     
+    <!--
     <init-param> 
     	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
     	<param-value>
     		specs/hello-world.ttl
     	</param-value>
     </init-param>
-    
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-
-  <servlet>
-    <servlet-name>hello</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
-    
-    <init-param> 
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
-    	<param-value>
-    		specs/hello-world.ttl
-    	</param-value>
-    </init-param>
+    -->
     
     <init-param>
     	<param-name>com.sun.jersey.config.property.packages</param-name>
@@ -42,166 +42,6 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
   
-  <!-- ==================================================================== -->
-
-  <servlet>
-    <servlet-name>hello-again</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
-    
-    <init-param> 
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
-    	<param-value>
-    		specs/hello-again-world.ttl
-    	</param-value>
-    </init-param>
-    
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <!-- ==================================================================== -->
-
-  <servlet>
-    <servlet-name>tiny-ed</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
-    
-    <init-param> 
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
-    	<param-value>
-    		specs/tiny-education.ttl
-    	</param-value>
-    </init-param>
-    
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-
-  
-  <!-- ==================================================================== -->
-
-  <servlet>
-    <servlet-name>mini-ed</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
-    
-    <init-param> 
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
-    	<param-value>
-    		specs/mini-education.ttl
-    	</param-value>
-    </init-param>
-    
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <!-- ==================================================================== -->
-
-  <servlet>
-    <servlet-name>full-ed</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
-    
-    <init-param> 
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
-    	<param-value>
-    		specs/full-education.ttl
-    	</param-value>
-    </init-param>
-    
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <!-- ==================================================================== -->
-
-  <servlet>
-    <servlet-name>old-ed</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
-    
-    <init-param> 
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
-    	<param-value>
-    		specs/old-education.ttl
-    	</param-value>
-    </init-param>
-    
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <!-- ==================================================================== -->
-
-  <servlet>
-    <servlet-name>mountain</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
-    
-    <init-param> 
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
-    	<param-value>
-    		specs/mountain.ttl
-    	</param-value>
-    </init-param>
-    
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-    
-  
-  <!-- ==================================================================== -->
-
-  <servlet>
-    <servlet-name>all</servlet-name>
-    <servlet-class>com.epimorphics.lda.routing.Container</servlet-class>
-    
-    <init-param>
-    	<param-name>com.epimorphics.api.prefixPath</param-name>
-    	<param-value>{file}</param-value>
-    </init-param>
-    
-    <init-param> 
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name> 
-    	<param-value>
-        	specs/hello-world.ttl
-        	, specs/hello-again-world.ttl
-        	, specs/tiny-education.ttl
-        	, specs/mini-education.ttl
-        	, specs/full-education.ttl
-        	, specs/old-education.ttl
-        	, specs/mountain.ttl
-    	</param-value>
-    </init-param>
-    
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-    
   <!-- ==================================================================== -->
 
   <servlet>
@@ -235,56 +75,14 @@
   
   <servlet-mapping>
     <servlet-name>default</servlet-name>
-    <!--
-    <url-pattern>/data/*</url-pattern>
-    <url-pattern>/docs/*</url-pattern>
-    <url-pattern>/images/*</url-pattern>
-    <url-pattern>/openlayers/*</url-pattern>
-    <url-pattern>/scripts/*</url-pattern>
-    <url-pattern>/specs/*</url-pattern>
-    <url-pattern>/specs/*</url-pattern>
-    <url-pattern>/xslt/*</url-pattern>
-    -->
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/lda-assets/*</url-pattern>
   </servlet-mapping>
   
   <!-- ==================================================================== -->
 
   <servlet-mapping>
-     <url-pattern>/hello/*</url-pattern> <servlet-name>hello</servlet-name>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-     <url-pattern>/hello-again/*</url-pattern> <servlet-name>hello-again</servlet-name>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-     <url-pattern>/tiny-ed/*</url-pattern> <servlet-name>tiny-ed</servlet-name>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-     <url-pattern>/mini-ed/*</url-pattern> <servlet-name>mini-ed</servlet-name>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-     <url-pattern>/full-ed/*</url-pattern> <servlet-name>full-ed</servlet-name>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-     <url-pattern>/mountain/*</url-pattern> <servlet-name>mountain</servlet-name>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-     <url-pattern>/old-ed/*</url-pattern> <servlet-name>old-ed</servlet-name>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-     <url-pattern>/all/*</url-pattern> <servlet-name>all</servlet-name>
-  </servlet-mapping>
-  
-  <servlet-mapping>
-     <url-pattern>/all/*</url-pattern> <servlet-name>all</servlet-name>
-  </servlet-mapping>
+     <url-pattern>/*</url-pattern> <servlet-name>app</servlet-name>
+  </servlet-mapping>  
   
   <!-- ==================================================================== -->
 
