--- a/deliver-elda/src/main/webapp/WEB-INF/web.xml
+++ b/deliver-elda/src/main/webapp/WEB-INF/web.xml
@@ -79,6 +79,6 @@
   <!-- ==================================================================== -->
 
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>/index.html</welcome-file>
   </welcome-file-list>
 </web-app>
