--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>lda-top</artifactId>
+    <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
     <version>1.2.14-SNAPSHOT</version>
   </parent>
