--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>lda-top</artifactId>
+    <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
     <version>1.2.14-SNAPSHOT</version>
   </parent>
