--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.epimorphics.lda</groupId>
-  <artifactId>lda-top</artifactId>
+  <artifactId>elda</artifactId>
   <version>1.2.14-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>lda-top</name>
+  <name>elda</name>
   <description>Top level linked data API project</description>
 
   <scm>
