--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.15</version>
+    <version>1.2.15-SNAPSHOT</version>
   </parent>
 
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>elda-standalone</name>
-  <version>1.2.15</version>
+  <version>1.2.15-SNAPSHOT</version>
   <description>instant Elda webapp</description>
 
   <dependencies>
@@ -51,7 +51,8 @@
     <plugins>
         <plugin>
             <artifactId>maven-jetty-plugin</artifactId>
-            <groupId>org.mortbay.jetty</groupId>
+	    <groupId>org.mortbay.jetty</groupId>
+	    <version>6.1.25</version>
         </plugin>  
         
         <!--  assemble the final jar file -->
