--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.15</version>
+    <version>1.2.15-SNAPSHOT</version>
   </parent>
 
   <artifactId>elda-testing-webapp</artifactId>
   <packaging>war</packaging>
   <name>elda-testing-webapp</name>
-  <version>1.2.15</version>
+  <version>1.2.15-SNAPSHOT</version>
   <description>webapp for Elda system tests</description>
 
   <dependencies>
@@ -76,14 +76,6 @@
       <version>4.8.2</version>
     </dependency>
   
-    <dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>servlet-api</artifactId>
-    	<version>2.5</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
-    </dependency>
-
     <dependency>
         <groupId>com.epimorphics.lda</groupId>
         <artifactId>lda</artifactId>
