Fixed Jersey dependencies -- needed jersey-servlet.

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 
     <dependency>
       <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-servlet</artifactId>
+      <version>1.12</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-server</artifactId>
       <version>1.12</version>
       <type>jar</type>
