--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-core</artifactId>
-      <version>1.6-ea04</version>
+      <version>1.12</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-server</artifactId>
-      <version>1.6-ea04</version>
+      <version>1.12</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -34,9 +34,15 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-json</artifactId>
-      <version>1.6-ea04</version>
+      <version>1.12</version>
       <type>jar</type>
       <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-servlet</artifactId>
+      <version>1.12</version>
     </dependency>
 
     <dependency>
@@ -44,7 +50,7 @@
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
       <type>jar</type>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
