(a) spike for basic auth (b) default 404 on no results (c) fix application/xml and text/xml.

--- a/deliver-elda/src/main/webapp/WEB-INF/web.xml
+++ b/deliver-elda/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,7 @@
   <servlet>
   	<servlet-name>loader-init</servlet-name>
   	<servlet-class>com.epimorphics.lda.routing.Loader</servlet-class>
+  	
   	<init-param>
 		<param-name>com.epimorphics.api.initialSpecFile</param-name>
         <param-value>
@@ -52,6 +53,12 @@
         	, ved::specs/mini-education-velocity.ttl
         </param-value>
   	</init-param>
+    
+    <init-param>
+    	<param-name>com.epimorphics.api.authKey.example</param-name>
+    	<param-value>auth/example.auth</param-value>
+    </init-param>
+    
     <load-on-startup>1</load-on-startup>
   </servlet>
   
