--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.17</version>
+    <version>1.2.18-SNAPSHOT</version>
   </parent>
 
   <artifactId>elda-testing-webapp</artifactId>
   <packaging>war</packaging>
   <name>elda-testing-webapp</name>
-  <version>1.2.17</version>
+  <version>1.2.18-SNAPSHOT</version>
   <description>webapp for Elda system tests</description>
 
   <dependencies>
