--- a/json-rdf/pom.xml
+++ b/json-rdf/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.19</version>
+    <version>1.2.20-SNAPSHOT</version>
   </parent>
 
   <!--
