--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
           <groupId>org.apache.velocity</groupId>
           <artifactId>velocity</artifactId>
           <version>1.7</version>
+		  <scope>test</scope>
       </dependency>
 
 
@@ -151,6 +152,12 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+
+	<dependency>
+		<groupId>xmlunit</groupId>
+		<artifactId>xmlunit</artifactId>
+		<version>1.4</version>
+	</dependency>
 
     <dependency>
         <groupId>org.apache.jena</groupId>
