--- a/lda/pom.xml
+++ b/lda/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.2.22-SNAPSHOT</version>
+    <version>1.2.22</version>
   </parent>
 
 <!--  
