Added prefix-wildcard code, documentation, and (limited) testing of nameToPrefix.

--- a/deliver-elda/src/main/webapp/WEB-INF/web.xml
+++ b/deliver-elda/src/main/webapp/WEB-INF/web.xml
@@ -51,6 +51,7 @@
         	, mountain::specs/mountain.ttl
         	, velocity::specs/hello-velocity.ttl
         	, ved::specs/mini-education-velocity.ttl
+        	, demo-*::/etc/elda/demo-*.ttl
         </param-value>
   	</init-param>
     
