--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -40,7 +40,16 @@
 
   <build>
     <finalName>elda-common</finalName>
-    <plugins>
+	<plugins>
+
+		<plugin>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>maven-jetty-plugin</artifactId>
+			<configuration>
+				<contextPath>/elda</contextPath>
+			</configuration>
+		</plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
