--- a/deliver-elda/src/main/webapp/WEB-INF/web.xml
+++ b/deliver-elda/src/main/webapp/WEB-INF/web.xml
@@ -33,20 +33,10 @@
     <init-param>
     	<param-name>com.epimorphics.api.initialSpecFile</param-name>
 		<param-value>
-			/home/eh/elda-configs/{APP}.ttl
-        	, hello::specs/hello-world.ttl
-        	, again::specs/hello-again-world.ttl
-        	, tiny::specs/tiny-education.ttl
-        	, mini::specs/mini-education.ttl
-        	, full::specs/full-education.ttl
-        	, old::specs/old-education.ttl
-        	, mountain::specs/mountain.ttl
-        	, velocity::specs/hello-velocity.ttl
-        	, ved::specs/mini-education-velocity.ttl
+			/home/chris/elda-configs/{APP}.ttl
         </param-value>
     </init-param>
   </servlet>
-
 
   <servlet>
   	<servlet-name>loader-init</servlet-name>
@@ -58,10 +48,12 @@
         </param-value>
   	</init-param>
     
+    <!--
     <init-param>
     	<param-name>com.epimorphics.api.authKey.example</param-name>
     	<param-value>auth/example.auth</param-value>
     </init-param>
+    -->
     
     <load-on-startup>1</load-on-startup>
   </servlet>
