--- a/deliver-elda/src/main/webapp/log4j.properties
+++ b/deliver-elda/src/main/webapp/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, stderr
+log4j.rootLogger=DEBUG, stderr
 
 # Set up logging to include a file record of the output
 # Note: the file is always created, even if there is 
