Hooray, api-config working again.

--- a/deliver-elda/src/main/webapp/WEB-INF/web.xml
+++ b/deliver-elda/src/main/webapp/WEB-INF/web.xml
@@ -34,29 +34,9 @@
     <init-param>
     	<param-name>com.epimorphics.api.initialSpecFile</param-name>
 		<param-value>
-			/home/chris/elda-configs/{APP}.ttl
+			/etc/elda/configs/{APP}_*.ttl
         </param-value>
     </init-param>
-  </servlet>
-
-  <servlet>
-  	<servlet-name>loader-init</servlet-name>
-  	<servlet-class>com.epimorphics.lda.routing.Loader</servlet-class>
-  	
-  	<init-param>
-		<param-name>com.epimorphics.api.initialSpecFile</param-name>
-        <param-value>
-        </param-value>
-  	</init-param>
-    
-    <!--
-    <init-param>
-    	<param-name>com.epimorphics.api.authKey.example</param-name>
-    	<param-value>auth/example.auth</param-value>
-    </init-param>
-    -->
-    
-    <load-on-startup>1</load-on-startup>
   </servlet>
   
   <!-- ==================================================================== -->
