_resourceRoot is now context-sensitive.

--- a/deliver-elda/pom.xml
+++ b/deliver-elda/pom.xml
@@ -46,7 +46,7 @@
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>maven-jetty-plugin</artifactId>
 			<configuration>
-				<contextPath>/elda</contextPath>
+				<contextPath>/other</contextPath>
 			</configuration>
 		</plugin>
 
