XSLT URL-getter now works with URLs as well as context-local filepaths.

--- a/elda-common/pom.xml
+++ b/elda-common/pom.xml
@@ -46,7 +46,7 @@
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>maven-jetty-plugin</artifactId>
 			<configuration>
-				<contextPath>/other</contextPath>
+				<contextPath>/elda-common</contextPath>
 			</configuration>
 		</plugin>
 
