Add Brian's path changes, add assets as elda module, update documentation for Elda Common.

--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,7 @@
 
   <modules>
     <module>elda-lda</module>
+	<module>elda-assets</module>
     <module>elda-common</module>
     <module>elda-standalone</module>
     <module>elda-system-tests</module>
