--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -20,6 +20,7 @@
           <groupId>org.apache.velocity</groupId>
           <artifactId>velocity</artifactId>
           <version>1.7</version>
+		  <scope>compile</scope>
       </dependency>
 
     <dependency>
