Fixing POM issues, also scrubbing assets web.xml.

--- a/elda-common/pom.xml
+++ b/elda-common/pom.xml
@@ -31,7 +31,7 @@
   
     <dependency>
     	<groupId>com.epimorphics.lda</groupId>
-    	<artifactId>lda</artifactId>
+    	<artifactId>elda-lda</artifactId>
     	<version>${project.version}</version>
     </dependency>
 
