--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -18,7 +18,7 @@
 
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
-      <artifactId>lda</artifactId>
+      <artifactId>elda-lda</artifactId>
       <version>${project.version}</version>
     </dependency>
 
