--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
       <repository>
         <id>epi-public-repo</id>
         <url>ftp://epimorphics.com</url>
-      </repository>
+	</repository>
   </distributionManagement>
 
   <dependencies>
@@ -235,7 +235,20 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
-    -->
+	-->
+	
+    <repository>
+        <id>epi-public-repo</id>
+        <name>Epimorphics Public Repository</name>
+        <url>http://repository.epimorphics.com</url>
+        <layout>default</layout>
+        <releases>
+            <enabled>true</enabled>
+        </releases>
+        <snapshots>
+            <enabled>true</enabled>
+		</snapshots>
+	</repository>
 
     <repository>
       <id>apache-repo-snapshots</id>
@@ -261,7 +274,8 @@
         <name>Java.net Repository for Maven</name>
         <url>http://download.java.net/maven/2/</url>
         <layout>default</layout>
-    </repository>
+	</repository>
+
     <repository>
         <id>codehaus.maven.repository</id>
         <name>Codehaus Maven Respository</name>
