Fixing POM problems.

--- a/elda-common/src/main/webapp/WEB-INF/web.xml
+++ b/elda-common/src/main/webapp/WEB-INF/web.xml
@@ -45,6 +45,11 @@
      <servlet-name>jersey-for-elda</servlet-name>
      <url-pattern>/*</url-pattern> 
   </servlet-mapping>  
+
+  <servlet-mapping>
+	<servlet-name>default</servlet-name>
+	<url-pattern>/elda-assets/*</url-pattern>
+  </servlet-mapping>
   
   <!-- ==================================================================== -->
 
