--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -55,13 +55,13 @@
 
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
-      <artifactId>lda</artifactId>
+      <artifactId>elda-lda</artifactId>
       <version>${project.version}</version>
     </dependency>
     
     <dependency>
         <groupId>com.epimorphics.lda</groupId>
-        <artifactId>lda</artifactId>
+        <artifactId>elda-lda</artifactId>
         <version>${project.version}</version>
         <classifier>sources</classifier>
         <scope>compile</scope>
@@ -75,7 +75,7 @@
   
     <dependency>
         <groupId>com.epimorphics.lda</groupId>
-        <artifactId>lda</artifactId>
+        <artifactId>elda-lda</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
         <scope>test</scope>
