Cnahed default wildcarded config path for elda-common to /etc/elda/conf.d/*.ttl

--- a/elda-common/src/main/webapp/WEB-INF/web.xml
+++ b/elda-common/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
     <init-param>
     	<param-name>com.epimorphics.api.initialSpecFile</param-name>
 		<param-value>
-			/etc/elda/configs/{APP}_*.ttl
+			/etc/elda/conf.d/{APP}/*.ttl
         </param-value>
     </init-param>
   </servlet>
