--- a/elda-standalone/src/main/webapp/WEB-INF/web.xml
+++ b/elda-standalone/src/main/webapp/WEB-INF/web.xml
@@ -2,59 +2,55 @@
 <!DOCTYPE web-app PUBLIC 
 	'-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN'
 	'http://java.sun.com/dtd/web-app_2_3.dtd'>
-<web-app>        
-    
-    <!-- ======================================================== -->
-    
-    <filter>
-        <filter-name>DivertFilesFilter</filter-name>
-        <filter-class>com.epimorphics.lda.routing.DivertFilesFilter</filter-class>
-    </filter>
-    
-    <filter-mapping>
-        <filter-name>DivertFilesFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    
-  <servlet>
-    <servlet-name>jersey-for-elda</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-       
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
-    
-    <init-param>
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name>
-    	<param-value>
-        	hello::specs/hello-world.ttl
-        	, again::specs/hello-again-world.ttl
-        	, tiny::specs/tiny-education.ttl
-        	, mini::specs/mini-education.ttl
-        	, full::specs/full-education.ttl
-        	, old::specs/old-education.ttl
-        	, mountain::specs/mountain.ttl
-        	, velocity::specs/hello-velocity.ttl
-        	, ved::specs/mini-education-velocity.ttl
-			, demo-*::/etc/elda/conf.d/demo-*.ttl
-        </param-value>
-    </init-param>
-    
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <!-- ==================================================================== -->
 
+<web-app>        
+	
+	<context-param>
+	   <param-name>com.epimorphics.api.initialSpecFile</param-name>
+        <param-value>
+            hello::specs/hello-world.ttl
+            , again::specs/hello-again-world.ttl
+            , tiny::specs/tiny-education.ttl
+            , mini::specs/mini-education.ttl
+            , full::specs/full-education.ttl
+            , old::specs/old-education.ttl
+            , mountain::specs/mountain.ttl
+            , velocity::specs/hello-velocity.ttl
+            , ved::specs/mini-education-velocity.ttl
+            , demo-*::/etc/elda/conf.d/demo-*.ttl
+        </param-value>
+	</context-param>
+  
+    <filter>
+        <filter-name>Jersey Web Application</filter-name>
+        <filter-class>com.sun.jersey.spi.container.servlet.ServletContainer</filter-class>
+    
+        <init-param>
+          <param-name>com.sun.jersey.config.property.packages</param-name>
+          <param-value>com.epimorphics.lda.restlets</param-value>
+        </init-param>
+        
+        <init-param>
+          <param-name>com.sun.jersey.config.feature.FilterForwardOn404</param-name>
+          <param-value>true</param-value>
+        </init-param>
+        
+        <init-param>
+             <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
+             <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
+         </init-param>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>Jersey Web Application</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   <!-- ==================================================================== -->
   
-  <!--
   <listener>
-    <listener-class>com.epimorphics.lda.jmx.Statistics</listener-class>
-    <listener-class>com.epimorphics.lda.jmx.CacheControl</listener-class>
+    <listener-class>com.epimorphics.lda.restlets.RouterRestlet$Init</listener-class>
   </listener>
-  -->
   
   <servlet>
     <servlet-name>force-log4j</servlet-name>
@@ -64,17 +60,12 @@
   
   <!-- ==================================================================== -->
   
+  <!--
   <servlet-mapping>
     <servlet-name>default</servlet-name>
-    <url-pattern>/lda-assets/*</url-pattern>
-  </servlet-mapping>
-  
-  <!-- ==================================================================== -->
-
-  <servlet-mapping>
-     <servlet-name>jersey-for-elda</servlet-name>
-     <url-pattern>/*</url-pattern> 
+    <url-pattern>/</url-pattern>
   </servlet-mapping>  
+  -->
   
   <!-- ==================================================================== -->
 
