--- a/elda-common/src/main/webapp/WEB-INF/web.xml
+++ b/elda-common/src/main/webapp/WEB-INF/web.xml
@@ -21,24 +21,43 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     -->
+  
+  <!-- ==================================================================== -->
     
-  <servlet>
-    <servlet-name>jersey-for-elda</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-       
-    <init-param>
-    	<param-name>com.sun.jersey.config.property.packages</param-name>
-    	<param-value>com.epimorphics.lda.restlets</param-value>
-    </init-param>
+    <context-param>
+       <param-name>com.epimorphics.api.initialSpecFile</param-name>
+        <param-value>/etc/elda/conf.d/{APP}/*.ttl</param-value>
+    </context-param>
+  
+  <!-- ==================================================================== -->
+  
+    <filter>
+        <filter-name>Jersey Web Application</filter-name>
+        <filter-class>com.sun.jersey.spi.container.servlet.ServletContainer</filter-class>
     
-    <init-param>
-    	<param-name>com.epimorphics.api.initialSpecFile</param-name>
-		<param-value>
-			/etc/elda/conf.d/{APP}/*.ttl
-        </param-value>
-    </init-param>
-  </servlet>
-
+        <init-param>
+          <param-name>com.sun.jersey.config.property.packages</param-name>
+          <param-value>com.epimorphics.lda.restlets</param-value>
+        </init-param>
+        
+        <init-param>
+          <param-name>com.sun.jersey.config.feature.FilterForwardOn404</param-name>
+          <param-value>true</param-value>
+        </init-param>
+        
+        <init-param>
+             <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
+             <param-value>com.sun.jersey.api.container.filter.PostReplaceFilter</param-value>
+         </init-param>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>Jersey Web Application</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+  
+  <!-- ==================================================================== -->
+ 
   <servlet>
 	<servlet-name>force-log4j</servlet-name>
 	<servlet-class>com.epimorphics.lda.restlets.ForceLog4JAndAnnounceElda</servlet-class>
@@ -46,15 +65,16 @@
   </servlet>
   
   <!-- ==================================================================== -->
-
-  <servlet-mapping>
-     <servlet-name>jersey-for-elda</servlet-name>
-     <url-pattern>/*</url-pattern> 
-  </servlet-mapping>  
+  
+  <listener>
+    <listener-class>com.epimorphics.lda.restlets.RouterRestlet$Init</listener-class>
+  </listener>
+  
+  <!-- ==================================================================== -->
 
   <servlet-mapping>
 	<servlet-name>default</servlet-name>
-	<url-pattern>/elda-assets/*</url-pattern>
+	<url-pattern>/*</url-pattern>
   </servlet-mapping>
   
   <!-- ==================================================================== -->
